--- a/도메인모델.md
+++ b/도메인모델.md
@@ -6,15 +6,16 @@ _Entity_
 - passwordHash: 비밀번호
 - status: 회원 상태
 #### 행위
-- --constructor() 회원 생성: email, nickname, password, status--
-- create() 회원 생성: email, nickname, password, passwordEncoder
+- ~~constructor() 회원 생성: email, nickname, password, status~~
+- ~~create() 회원 생성: email, nickname, password, passwordEncoder~~
+- register() 회원 등록: email, nickname, password, passwordEncoder
 - activate() 가입을 완료 시킨다.
 - deactivate() 탈퇴시킨다.
 - verifyPassword() 비밀번호를 검증한다.
 - changeNickname() 닉네임을 변경한다.
 - changePassword() 비밀번호를 변경한다.
 #### 규칙
-- 회원 생성후 상태는 가입대기
+- 회원 등록후 상태는 가입대기
 - 일정조건을 만족하면 가입 완료가 된다.
 - 가입 대기 상태에서만 가입 완료가 될 수 있다.
 - 가입 완료 상태에서는 탈퇴할 수 있다.
