--- a/도메인모델.md
+++ b/도메인모델.md
@@ -5,6 +5,7 @@ _Entity_
 - nickname: 닉네임
 - passwordHash: 비밀번호
 - status: 회원 상태
+- detail: MemberDetail 1:1
 #### 행위
 - ~~constructor() 회원 생성: email, nickname, password, status~~
 - ~~create() 회원 생성: email, nickname, password, passwordEncoder~~
@@ -20,6 +21,16 @@ _Entity_
 - 가입 대기 상태에서만 가입 완료가 될 수 있다.
 - 가입 완료 상태에서는 탈퇴할 수 있다.
 - 회원의 비밀번호는 해시를 만들어서 저장한다.
+
+### 회원 상세(MemberDetail)
+- id: Long
+- profile: 프로필 주소
+- introduction: 소개
+- registeredAt: 가입일
+- activatedAt: 가입 완료일
+- deactivatedAt: 탈퇴일
+#### 행위
+
 
 ### 회원 상태(MemberStatus)
 _Enum_
