--- a/도메인모델.md
+++ b/도메인모델.md
@@ -1,5 +1,9 @@
+## 도미인 모델
+
+---
+
 ### 회원(Member)
-_Entity_
+_Aggregate Root_
 #### 속성
 - email: 이메일 - ID
 - nickname: 닉네임
@@ -23,6 +27,7 @@ _Entity_
 - 회원의 비밀번호는 해시를 만들어서 저장한다.
 
 ### 회원 상세(MemberDetail)
+_Entity_
 - id: Long
 - profile: 프로필 주소
 - introduction: 소개
@@ -45,10 +50,19 @@ _domain Service_
 - encode() 비밀번호를 해시로 만든다.
 - matches() 비밀번호와 해시가 일치하는지 확인한다.
 
+### 프로필 주소
+_Value Object_
+#### 속성
+- address: 프로필 이미지 주소
+
+---
+
 ### EmailValue
 _Value Object_
 #### 속성
 - address: 이메일
+
+---
 
 ### 강사
 
